<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_btm_nav_home"
        android:icon="@drawable/ic_home_view_unselected"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_home_title" />

    <item
        android:id="@+id/menu_main_btm_nav_search"
        android:icon="@drawable/ic_search_view_unselected"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_search_title" />

    <item
        android:id="@+id/menu_main_btm_nav_favorite"
        android:icon="@drawable/ic_favorite_view_unselected"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_favorite_title" />

    <item
        android:id="@+id/menu_main_btm_nav_order"
        android:icon="@drawable/ic_order_view_unselected"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_order_title" />

    <item
        android:id="@+id/menu_main_btm_nav_my_page"
        android:icon="@drawable/ic_my_page_view_unselected"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_my_page_title" />

</menu>
