<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.store.StoreDetailActivity"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stateListAnimator="@null">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/white"
            android:background="@color/white"
            app:collapsedTitleGravity="center"
            app:expandedTitleTextAppearance="@style/CollapsingToolbar.TitleText"
            app:collapsedTitleTextAppearance="@style/Toolbar.TitleText"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/store_detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:minHeight="?attr/actionBarSize"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin">

                <ImageButton
                    android:id="@+id/store_detail_image_button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_toolbar_back"
                    android:contentDescription="@string/back_button_default"/>

                <TextView
                    android:id="@+id/store_detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="25dp"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:text="@string/store_detail_title"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </androidx.appcompat.widget.Toolbar>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginTop="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:background="@color/black" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:animateLayoutChanges="true"
            android:nestedScrollingEnabled="true"
            android:background="@color/white">

            <ImageView
                android:id="@+id/store_detail_image_view"
                android:layout_width="match_parent"
                android:layout_height="248dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:minHeight="0dp"
                android:src="@drawable/test_naver_map"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/store_detail_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/store_detail_image_view"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/review_text_store"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/store_detail_phone"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/store_detail_phone_detail"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/store_detail_call"
                        android:textColor="@color/blue_300"
                        android:textSize="13sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/store_detail_address"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/store_detail_address_detail"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/store_detail_owner_name"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/store_detail_owner_name_detail"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/store_detail_number"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/store_detail_number_detail"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/store_detail_store_name"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/store_detail_store_name_detail"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </LinearLayout>

                <!-- 영업시간 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/store_detail_time"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/store_detail_time_detail"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <!-- 매장소개 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/store_detail_store_info"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/store_detail_store_info_detail"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <!-- 원산지 정보 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/store_detail_origin"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/store_detail_origin_detail"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <!-- 영양성분 정보 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/store_detail_nutrient"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/store_detail_nutrient_detail"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <!-- 알레르기 유발성분 보호 정보 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/store_detail_allergy"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/store_detail_allergy_detail"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="30dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/store_coupang"
                android:textColor="@color/gray_500"
                android:textSize="9sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/store_detail_linear_layout"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>