<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="23dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/review_text_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_page_text_name"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="start|center">
        <RatingBar
            android:id="@+id/review_rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:isIndicator="false"
            android:progressTint="@color/yellow_a700"
            android:secondaryProgressTint="@color/transparency"
            android:numStars="5"
            android:stepSize="0.5" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"
            android:background="@color/gray_200" />
        <TextView
            android:id="@+id/review_text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/review_date"
            android:textColor="@color/gray_500"
            android:textSize="12sp" />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_call"
            android:textColor="@color/gray_500"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/review_text_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/store_small_review_text"
        android:textColor="@color/gray_700"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_order"
            android:textColor="@color/gray_500"
            android:textSize="13sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/review_text_menu"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/review_help"
        android:textColor="@color/gray_700"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="3dp"
            android:gravity="center"
            android:background="@drawable/button_default_gray2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginEnd="4dp"
                android:text="@string/review_help_ok"
                android:textSize="11sp"
                android:textColor="@color/gray_600"
                android:drawableStart="@drawable/ic_thumb_up_small"
                android:drawablePadding="5dp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="3dp"
            android:gravity="center"
            android:background="@drawable/button_default_gray2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginEnd="4dp"
                android:text="@string/review_help_no"
                android:textSize="11sp"
                android:textColor="@color/gray_600"
                android:drawableStart="@drawable/ic_thumb_down_small"
                android:drawablePadding="5dp"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="23dp"
        android:background="@color/gray_300" />

</LinearLayout>